teamcity-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: teamcity-server
  namespace: teamcity
  labels:
    app: teamcity-server
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 1024m
    nginx.ingress.kubernetes.io/proxy-connect-timeout: '30'
    nginx.ingress.kubernetes.io/proxy-read-timeout: '1800'
    nginx.ingress.kubernetes.io/proxy-send-timeout: '1800'
spec:
  tls:
    - hosts:
        - teamcity.lucasnet.int
        - teamcity.lucasnet.org
      secretName: lucasnet-tls
  rules:
    - host: teamcity.lucasnet.int
      http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: teamcity-server
                port:
                  number: 8111
